Fix weird overflow of numbers tables.

--- a/CSS/Numbers.css
+++ b/CSS/Numbers.css
@@ -8,7 +8,7 @@
     margin-right: 22pt;
 }
 .numbers-header {
-    font-family: 'Hoefler Text', Times New Roman, Times, serif;
+    font-family: Times New Roman, Times, serif;
     font-weight: normal;
     font-style: italic;
     font-size: 13.5pt;
@@ -19,10 +19,11 @@
 }
 
 .letters {
-    font-family: 'Hoefler Text', Times New Roman, Times, serif;
+    font-family: Times New Roman, Times, serif;
     font-style: italic;
     font-weight: normal;
     width: 10pt;
+
 }
 
 .letters h3 {
@@ -33,29 +34,29 @@
 .left-page .letters {
     float: left;
     margin-left: 6pt;
+    margin-right: 12pt;
 }
 .right-page .letters {
     float: right;
     margin-right: 6pt;
 }
 
+/* Not sure why, but if we don't use a container then when printed to a PDF
+the lines overflow the page. This does not occur in emulation mode. Behavior
+is the same on both Chrome and Firefox. */
+.numbers-container {
+    /*width: 100%;*/
+    overflow: hidden;
+    height: calc(100% - 30pt);
+}
+
 /* Div container for the numbers table*/
 .numbers {
-    /* Fill available space below header */
-    height: calc(100% - 32pt);
-    /*width:100%;*/
-    top:37px;
-    bottom:0;
+    width:100%;
 }
 
 .left-page .numbers {
-    float: left;
     margin-left: 12pt;
-}
-
-.right-page .numbers {
-    float: right;
-    margin-right: 12pt;
 }
 
 /* Split table with middle line*/
